--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,14 @@
+beautifulsoup4==4.6.3
+bs4==0.0.1
+certifi==2018.10.15
+chardet==3.0.4
+Click==7.0
+gTTS==2.0.1
+gTTS-token==1.1.2
+idna==2.7
 numpy==1.15.4
 opencv-python==3.4.3.18
+pygame==1.9.4
+requests==2.20.1
+six==1.11.0
+urllib3==1.24.1
