--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,10 @@ bs4==0.0.1
 certifi==2018.10.15
 chardet==3.0.4
 Click==7.0
+cloudpickle==0.6.1
 cycler==0.10.0
+dask==0.20.2
+decorator==4.3.0
 gast==0.2.0
 grpcio==1.16.1
 gTTS==2.0.1
@@ -14,8 +17,13 @@ gTTS-token==1.1.2
 h5py==2.8.0
 html5lib==0.9999999
 idna==2.7
+imgaug==0.2.6
+Keras==2.2.4
+Keras-Applications==1.0.6
+Keras-Preprocessing==1.0.5
 Markdown==3.0.1
 matplotlib==2.1.2
+networkx==2.2
 numpy==1.15.4
 opencv-python==3.4.3.18
 Pillow==5.3.0
@@ -25,12 +33,16 @@ pygame==1.9.4
 pyparsing==2.3.0
 python-dateutil==2.7.5
 pytz==2018.7
+PyWavelets==1.0.1
+PyYAML==3.13
 requests==2.20.1
+scikit-image==0.14.1
 scikit-learn==0.19.1
 scipy==1.0.0
 six==1.11.0
-tensorboard==1.8.0
-tensorflow==1.8.0
+tensorboard==1.12.0
+tensorflow==1.12.0
 termcolor==1.1.0
+toolz==0.9.0
 urllib3==1.24.1
 Werkzeug==0.14.1
